--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 #spring.datasource.password=digipassword
 
 spring.datasource.url=jdbc:mysql://localhost:3306/pulpfiction?useSSL=false
-spring.datasource.username=pulpfiction
-spring.datasource.password=passwordchespacca
+spring.datasource.username=${DB_USERNAME:changeme}
+spring.datasource.password=${DB_PASSWORD:changeme}
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/pulpfiction?useSSL=false
 #spring.datasource.username=pulpfiction
@@ -46,3 +46,5 @@ logging.level.org.hibernate=ERROR
 
 #PROPERTY TO SOLVE SERIALIZATION PROBLEMS WITH LAZY DATA FETCHING
 spring.jackson.serialization.fail-on-empty-beans=false
+
+quandl.api-key=changeme
