--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #spring.datasource.username=digitalgarage
 #spring.datasource.password=digipassword
 
-spring.datasource.url=jdbc:mysql://localhost:3306/pulpfiction?useSSL=false
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/pulpfiction?useSSL=false
 spring.datasource.username=${DB_USERNAME:changeme}
 spring.datasource.password=${DB_PASSWORD:changeme}
 
